# flandria

./: .gitignore  README.md  after_build.py  app.py  config.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  positions.json  requirements.txt  run.py  test.py  tests.py  update_ranking.py  webpack.analyze.js  webpack.common.js  webpack.dev.js  webpack.prod.js
flandria-graphql-api/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
flandria-graphql-api/data/stats/: explorer_level.json  explorer_stats.json  mercenary_level.json  mercenary_stats.json  noble_level.json  noble_stats.json
flandria-graphql-api/docs/: 3d_Models.md
flandria-graphql-api/lib/noesis/: README.md  ReadMe.txt  advanced_commands.md
flandria-graphql-api/src/: config.py
flandria-graphql-api/src/api/: app.py  enums.py  schema.py  settings.py
flandria-graphql-api/src/api/_codegen/: __init__.py  codegen.py  helpers.py  inspector.py
flandria-graphql-api/src/api/inputs/: __init__.py
flandria-graphql-api/src/api/query/: __init__.py  helpers_query.py  pagination_query.py  player_stats_query.py  search_query.py  single_query.py
flandria-graphql-api/src/api/resolvers/: __init__.py  helpers.py  helpers_resolvers.py  pagination_resolver.py  player_stats_resolver.py  search_resolver.py  single_resolver.py  sqla_helpers.py
flandria-graphql-api/src/api/types/: __init__.py  _generated.py  page_info.py
flandria-graphql-api/src/assets/: __init__.py
flandria-graphql-api/src/assets/icons/: helpers.py  icons.py
flandria-graphql-api/src/assets/models/: __init__.py  convert.py  download_files.py  exceptions.py  kfm_file.py  models.py  utils.py
flandria-graphql-api/src/cli/: __init__.py  api.py  assets.py  cli.py  database.py  utils.py
flandria-graphql-api/src/core/: case_insensitive_dict.py  constants.py  utils.py
flandria-graphql-api/src/core/downloader/: __init__.py  download.py  index_file_parser.py
flandria-graphql-api/src/core/enums/: __init__.py  accessory_type.py  actor_grade.py  base_class_type.py  effect_code.py  essence_equip_type.py  gender.py  item_flag.py  item_grade.py  item_set_slot.py  models.py  monster_message_trigger.py  quest_mission_type.py  second_job_type.py  stat_type.py
flandria-graphql-api/src/database/: __init__.py  base.py  engine.py  types.py
flandria-graphql-api/src/database/column_types/: __init__.py  rgb.py
flandria-graphql-api/src/database/mixins/: __init__.py  actor_mixin.py  armor_mixin.py  base_mixin.py  class_land_mixin.py  class_sea_mixin.py  effect_mixin.py  equipment_mixin.py  florensia_model_mixin.py  item_set_mixin.py  row_id_mixin.py  ship_base_mixin.py  skill_mixin.py  upgrade_rule_mixin.py  weapon_mixin.py
flandria-graphql-api/src/database/models/: __init__.py  available_3d_models.py  bullet.py  consumable.py  effect.py  fusion_help.py  item_list.py  item_set.py  map.py  material.py  random_box.py  tower_floor.py
flandria-graphql-api/src/updater/: file_data.py  helpers.py  load_availble_3d_models.py  load_drops.py  load_maps.py  load_player_stats.py  updater.py
(+1072 files in other folders)
