[project]
name = "flandria-backend"
version = "1.0.0"
description = "Backend for Flandria"
authors = [{ name = "Jeremy", email = "HealYouDown@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "AGPL-3.0"
dependencies = [
    "requests>=2.31.0,<3",
    "loguru>=0.7.2,<0.8",
    "humanize>=4.9.0,<5",
    "click>=8.1.7,<9",
    "sqlalchemy>=2.0.30,<3",
    "lxml>=5.2.2,<6",
    "pillow>=10.3.0,<11",
    "pygltflib>=1.16.2,<2",
    "aiohttp>=3.9.5,<4",
    "aiofiles>=23.2.1,<24",
    "strawberry-graphql[cli]>=0.248.1,<0.249",
    "uvicorn>=0.30.6,<0.31",
    "python-dotenv>=1.0.1,<2",
    "starlette>=0.41.2,<0.42",
]

[dependency-groups]
dev = [
    "ruff>=0.4.4,<0.5",
    "types-requests>=2.31.0.20240406,<3",
    "lxml-stubs>=0.5.1,<0.6",
    "xlsxwriter>=3.2.0,<4",
    "types-aiofiles>=23.2.0.20240403,<24",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["lib"]

[tool.pyright]
exclude = ["lib"]
